# cli

./: .gitattributes  .gitignore  .justfile  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  coverage.yml  publish.yml  udeps.yml
locales/en-US/: main.ftl
locales/zh-CN/: main.ftl
locales/zh-Hans/: main.ftl
locales/zh-Hant/: main.ftl
src/: config.rs  lib.rs  main.rs
src/cmd/: bookshelf.rs  build.rs  check.rs  completions.rs  download.rs  favorites.rs  info.rs  mod.rs  read.rs  real_cugan.rs  search.rs  sign.rs  template.rs  transform.rs  unzip.rs  update.rs  zip.rs
src/renderer/: mdbook.rs  mod.rs  pandoc.rs
src/utils/: check.rs  concurrency.rs  convert.rs  current_dir.rs  image.rs  line_break.rs  login.rs  markdown.rs  mod.rs  novel.rs  novel_info.rs  progress.rs  unicode.rs  writer.rs
tests/: build.rs  check.rs  completions.rs  download.rs  help.rs  info.rs  main.rs  search.rs  template.rs  transform.rs  unzip.rs  update.rs  version.rs  zip.rs
tests/data/mdbook/: book.toml
tests/data/mdbook/src/: SUMMARY.md  introduction.md
tests/data/mdbook/src/volume001/: README.md  chapter001.md  chapter002.md  chapter003.md  chapter004.md  chapter005.md  chapter006.md  chapter007.md  chapter008.md  chapter009.md  chapter010.md  chapter011.md  chapter012.md  chapter013.md  chapter014.md  chapter015.md  chapter016.md  chapter017.md  chapter018.md  chapter019.md  chapter020.md  chapter021.md  chapter022.md  chapter023.md  chapter024.md  chapter025.md  chapter026.md  chapter027.md  chapter028.md  chapter029.md  chapter030.md  chapter031.md  chapter032.md  chapter033.md  chapter034.md  chapter035.md  chapter036.md  chapter037.md  chapter038.md  chapter039.md  (+42 more)
tests/data/mdbook/src/volume002/: README.md  chapter082.md  chapter083.md  chapter084.md  chapter085.md  chapter086.md  chapter087.md  chapter088.md
tests/data/mdbook/src/volume003/: README.md  chapter089.md  chapter090.md  chapter091.md  chapter092.md  chapter093.md  chapter094.md  chapter095.md  chapter096.md  chapter097.md  chapter098.md  chapter099.md  chapter100.md  chapter101.md  chapter102.md  chapter103.md  chapter104.md  chapter105.md  chapter106.md  chapter107.md  chapter108.md  chapter109.md  chapter110.md  chapter111.md  chapter112.md  chapter113.md  chapter114.md  chapter115.md  chapter116.md  chapter117.md  chapter118.md  chapter119.md  chapter120.md  chapter121.md  chapter122.md  chapter123.md  chapter124.md  chapter125.md  chapter126.md  chapter127.md  (+4 more)
tests/data/mdbook/src/volume004/: README.md  chapter132.md  chapter133.md  chapter134.md  chapter135.md  chapter136.md  chapter137.md  chapter138.md  chapter139.md  chapter140.md  chapter141.md  chapter142.md  chapter143.md  chapter144.md  chapter145.md  chapter146.md  chapter147.md  chapter148.md  chapter149.md  chapter150.md  chapter151.md  chapter152.md  chapter153.md  chapter154.md  chapter155.md  chapter156.md  chapter157.md  chapter158.md  chapter159.md  chapter160.md  chapter161.md  chapter162.md  chapter163.md  chapter164.md  chapter165.md  chapter166.md  chapter167.md  chapter168.md  chapter169.md  chapter170.md  (+20 more)
tests/data/mdbook/src/volume005/: README.md  chapter191.md  chapter192.md  chapter193.md  chapter194.md  chapter195.md  chapter196.md  chapter197.md  chapter198.md  chapter199.md  chapter200.md  chapter201.md  chapter202.md  chapter203.md  chapter204.md  chapter205.md  chapter206.md  chapter207.md  chapter208.md  chapter209.md  chapter210.md  chapter211.md  chapter212.md  chapter213.md  chapter214.md  chapter215.md  chapter216.md  chapter217.md  chapter218.md  chapter219.md  chapter220.md  chapter221.md  chapter222.md  chapter223.md  chapter224.md  chapter225.md  chapter226.md  chapter227.md  chapter228.md  chapter229.md  (+62 more)
tests/data/mdbook/src/volume006/: README.md  chapter292.md  chapter293.md  chapter294.md  chapter295.md  chapter296.md  chapter297.md  chapter298.md  chapter299.md  chapter300.md  chapter301.md  chapter302.md  chapter303.md  chapter304.md  chapter305.md  chapter306.md  chapter307.md  chapter308.md  chapter309.md  chapter310.md  chapter311.md  chapter312.md  chapter313.md  chapter314.md  chapter315.md  chapter316.md  chapter317.md  chapter318.md  chapter319.md  chapter320.md  chapter321.md  chapter322.md  chapter323.md  chapter324.md  chapter325.md  chapter326.md  chapter327.md  chapter328.md  chapter329.md  chapter330.md  (+27 more)
tests/data/mdbook/src/volume007/: README.md  chapter358.md  chapter359.md  chapter360.md  chapter361.md  chapter362.md  chapter363.md  chapter364.md  chapter365.md  chapter366.md  chapter367.md  chapter368.md  chapter369.md  chapter370.md  chapter371.md  chapter372.md  chapter373.md  chapter374.md  chapter375.md  chapter376.md  chapter377.md  chapter378.md  chapter379.md  chapter380.md  chapter381.md  chapter382.md  chapter383.md  chapter384.md  chapter385.md  chapter386.md  chapter387.md  chapter388.md  chapter389.md  chapter390.md  chapter391.md  chapter392.md  chapter393.md  chapter394.md  chapter395.md  chapter396.md  (+43 more)
tests/data/pandoc-epub/EPUB/: content.opf  nav.xhtml  toc.ncx
tests/data/pandoc-epub/EPUB/text/: ch001.xhtml  ch002.xhtml  ch003.xhtml  ch004.xhtml  ch005.xhtml  ch006.xhtml  ch007.xhtml  ch008.xhtml  ch009.xhtml  ch010.xhtml  ch011.xhtml  ch012.xhtml  ch013.xhtml  ch014.xhtml  ch015.xhtml  ch016.xhtml  ch017.xhtml  ch018.xhtml  ch019.xhtml  ch020.xhtml  ch021.xhtml  ch022.xhtml  ch023.xhtml  ch024.xhtml  ch025.xhtml  ch026.xhtml  ch027.xhtml  ch028.xhtml  ch029.xhtml  ch030.xhtml  ch031.xhtml  ch032.xhtml  ch033.xhtml  ch034.xhtml  ch035.xhtml  ch036.xhtml  ch037.xhtml  ch038.xhtml  ch039.xhtml  ch040.xhtml  (+408 more)
tests/utils/: mod.rs
